--- a/commbox.html
+++ b/commbox.html
@@ -18,7 +18,7 @@
    </style>
  </head>
  <body>
-   <redoc spec-url='https://apps.wispp.com/Commbox.json'></redoc>
+   <redoc spec-url='https://raw.githubusercontent.com/commbox-io/api/master/Commbox.json'></redoc>
    <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"> </script>
  </body>
 </html>
